--- a/index.html
+++ b/index.html
@@ -18,13 +18,9 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/kagechika/study">View on GitHub</a>
 
-          <h1 id="project_title">Study</h1>
+          <h1 id="project_title">My Github Page</h1>
           <h2 id="project_tagline"></h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/kagechika/study/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/kagechika/study/tarball/master">Download this project as a tar.gz file</a>
-            </section>
+          
         </header>
     </div>
 
@@ -68,7 +64,7 @@ $ git checkout gh-pages
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Study maintained by <a href="https://github.com/kagechika">kagechika</a></p>
+        <p class="copyright">Copyrigth &copy; 2014 kagechika<a href="https://github.com/kagechika">kagechika</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
