--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ $ git checkout gh-pages
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Copyrigth &copy; 2014 kagechika<a href="https://github.com/kagechika">kagechika</a></p>
+        <p class="copyright">Copyrigth &copy; 2014 <a href="https://github.com/kagechika">kagechika</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
